<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Dinner Planner</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="text">Welcome to Dinner Planner! \n\nHere you will be easily plan your dinner. \n\nOn the next page start by selecting number of participants.\nThen select your courses.\n\nWatch Magic Happen!</string>
    <string name="button_text">Start</string>
    <string name="total_cost">Total cost:</string>
    <string name="ingredients_text">Ingredients</string>
    <string name="instructions_text">Instructions</string>
    <string name="starter_text">Starter</string>
    <string name="main_text">Main</string>
    <string name="desert_text">Desert</string>
    <string name="title_activity_menu">Menu Activity</string>
    <string name="lbl_participants">Participants</string>
    <string name="lbl_cost">Total cost:</string>
    <string name="cost">Total cost: 0 kr</string>
    <string name="lbl_choose">Choose menu</string>
    <string name="lbl_starter">Starter</string>
    <string name="lbl_main">Main course</string>
    <string name="lbl_dessert">Dessert</string>
    <string name="lbl_tmp">tmp</string>
    <string name="button_create">Create</string>

</resources>