<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/imageButton1"
            android:layout_width="62dp"
            android:layout_height="36dp"
            android:src="@drawable/bakedbrie" />

        <TextView
            android:id="@+id/totalcost_text"
            android:layout_width="170dp"
            android:layout_height="30dp"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="10dp"
            android:text="@string/total_cost"
            android:textSize="20sp" />
    </LinearLayout>
    
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="180dp"
        android:text="@string/instructions_text" />
    
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <ImageButton
            android:id="@+id/imageButton1"
            android:layout_marginRight="20dp"
            android:layout_width="101dp"
            android:layout_height="match_parent"
            android:src="@drawable/bakedbrie" />

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="59dp"
            android:layout_height="56dp"            
            android:layout_marginRight="10dp"
            android:src="@drawable/icecream" />

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="60dp"
            android:layout_height="56dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/meatballs" />

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="60dp"
            android:layout_height="58dp"
            android:src="@drawable/sourdough" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="45dp"
            android:text="@string/ingredients_text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="Test" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:text="Test" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="Test" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:text="Test"
        android:textSize="25dp" />
    
      <ListView 
          android:id="@+id/listView"
          android:layout_height="match_parent"
          android:layout_width="match_parent" />


</LinearLayout>